clang/test/BSC/Negative/SafeZone/safe_variadic_va_arg/safe_variadic_va_arg.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

typedef __builtin_va_list va_list;
#define va_start(ap, param) __builtin_va_start(ap, param)
#define va_arg(ap, type) __builtin_va_arg(ap, type)
#define va_end(ap) __builtin_va_end(ap)

// va_list type, va_start, va_arg, and va_end are all forbidden in safe zones

// va_list parameter in _Safe function
_Safe int test_va_list_param(va_list args) {
    return 0;
}

// va_list variable in _Safe block - triggers uninitialized error (arrays cannot be initialized)
void test_va_list_variable_in_safe_block(void) {
    _Safe {
        va_list args;  // ok: va_list can be left uninitialized, BSCIR init analysis handles use-before-init
    }
}

// va_start in _Safe expression - triggers both unsafe function call and va_start forbidden
int test_va_start_in_safe_expr(const char *fmt, ...) {
    va_list args;
    _Unsafe {
        va_start(args, fmt);
    }
    _Safe {
        va_start(args, fmt);  // expected-error {{_Unsafe function call is forbidden in the safe zone}} expected-error {{va_start is forbidden in the safe zone}}
    }
    va_end(args);
    return 0;
}

// va_arg in _Safe expression
int test_va_arg_in_safe_expr(const char *fmt, ...) {
    va_list args;
    va_start(args, fmt);
    int val = _Safe(va_arg(args, int));  // expected-error {{va_arg is forbidden in the safe zone}}
    va_end(args);
    return val;
}

// va_end in _Safe expression - triggers unsafe function call and conversion errors
void test_va_end_in_safe_expr(const char *fmt, ...) {
    va_list args;
    va_start(args, fmt);
    _Safe {
        va_end(args);  // expected-error {{_Unsafe function call is forbidden in the safe zone}} expected-error {{conversion from type 'va_list' (aka '__builtin_va_list') to 'struct __va_list_tag *' is forbidden in the safe zone}}
    }
}
